syntax = "proto3";

package base.todo.v1;

import "google/protobuf/timestamp.proto";

option go_package = "todo/";

message Task {
  string id = 1;
  string title = 2;
  string description = 3;
  bool completed = 4;
  google.protobuf.Timestamp due_date = 5;
}

message TaskList {
  repeated Task tasks = 1;
}

message GetTaskRequest {
  string id = 1;
}

message DeleteTaskRequest {
  string id = 1;
}

message ListTasksRequest {}

service TodoService {
  rpc AddTask(Task) returns (Task);
  rpc GetTask(GetTaskRequest) returns (Task);
  rpc UpdateTask(Task) returns (Task);
  rpc DeleteTask(DeleteTaskRequest) returns (Task);
  rpc ListTasks(ListTasksRequest) returns (TaskList);
}
